html : add header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <img
+        src="./assets/logo.svg"
+        alt="Toque de cuisinier, logo de Les petits plats"
+      />
+      <h1>Les petits plats</h1>
+    </header>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
