add scripts and remove template

--- a/index.html
+++ b/index.html
@@ -69,32 +69,9 @@
         </div>
       </form>
 
-      <section class="recipes">
-        <article>
-          <div class="img"></div>
-          <div class="content">
-            <div class="content__main">
-              <h2></h2>
-              <div class="time">
-                <img
-                  src="./assets/clock.svg"
-                  alt="Horloge indiquant le temps de préparation du plat"
-                />
-                <p></p>
-              </div>
-            </div>
-            <div class="content__sub">
-              <div class="ingredient">
-                <ul></ul>
-              </div>
-              <div class="details">
-                <p></p>
-              </div>
-            </div>
-          </div>
-        </article>
-      </section>
+      <section class="recipes"></section>
     </main>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js" type="module"></script>
+    <script src="./scripts/data/recipes.js" type="module"></script>
   </body>
 </html>
