add tags and data attri to handle init tag

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <span
               ><img src="./assets/chevron.svg" alt="Chevron descendant"
             /></span>
+            <div
+              data-tag="ingredients"
+              class="container__tag container__tag--ingredient extended"
+            ></div>
           </div>
           <div class="filter__byTag--device">
             <label for="device"></label>
@@ -53,18 +57,26 @@
             <span
               ><img src="./assets/chevron.svg" alt="Chevron descendant"
             /></span>
+            <div
+              data-tag="appliance"
+              class="container__tag container__tag--device extended"
+            ></div>
           </div>
-          <div class="filter__byTag--utensil">
-            <label for="utensil"></label>
+          <div class="filter__byTag--ustensil">
+            <label for="ustensil"></label>
             <input
               type="search"
-              name="utensil"
-              id="utensil"
+              name="ustensil"
+              id="ustensil"
               placeholder="Ustensiles"
             />
             <span
               ><img src="./assets/chevron.svg" alt="Chevron descendant"
             /></span>
+            <div
+              data-tag="ustensils"
+              class="container__tag container__tag--utensil extended"
+            ></div>
           </div>
         </div>
       </form>
