button type button to prevent default behaviour

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="filter__byTag">
           <div class="filter__byTag--ingredient reduced">
-            <button class="ingredientBtn">Ingredient</button>
+            <button class="ingredientBtn" type="button">Ingredient</button>
             <label for="ingredient"></label>
             <input
               type="search"
@@ -48,7 +48,7 @@
             ></ul>
           </div>
           <div class="filter__byTag--device reduced">
-            <button class="deviceBtn">Appareils</button>
+            <button class="deviceBtn" type="button">Appareils</button>
             <label for="device"></label>
             <input
               type="search"
@@ -65,7 +65,7 @@
             ></ul>
           </div>
           <div class="filter__byTag--ustensil reduced">
-            <button class="ustensilsBtn">Ustensiles</button>
+            <button class="ustensilsBtn" type="button">Ustensiles</button>
             <label for="ustensil"></label>
             <input
               type="search"
