Missspelled ingredient btn

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           /></span>
         </div>
         <div class="filter__byTag">
-          <div class="filter__byTag--ingredient extended">
-            <button class="ingredientBtn" type="button">Ingredient</button>
+          <div class="filter__byTag--ingredient reduced">
+            <button class="ingredientBtn" type="button">Ingredients</button>
             <span
               ><img src="./assets/chevron.svg" alt="Chevron descendant"
             /></span>
