--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       <section class="recipes"></section>
     </main>
     <script src="./scripts/script.js" type="module"></script>
+    <script src="./scripts/utils/eventListener.js" type="module"></script>
     <script src="./scripts/data/recipes.js" type="module"></script>
   </body>
 </html>
