add ul for selected tags

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             ><img src="./assets/search.svg" alt="Loupe de recherche"
           /></span>
         </div>
+        <div class="tag__list">
+          <ul></ul>
+        </div>
         <div class="filter__byTag">
           <div class="filter__byTag--ingredient reduced">
             <button class="ingredientBtn" type="button">Ingredients</button>
