Fix : remove reduced class

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <ul></ul>
         </div>
         <div class="filter__byTag">
-          <div class="filter__byTag--ingredient reduced">
+          <div class="filter__byTag--ingredient">
             <button class="ingredientBtn" type="button">Ingredients</button>
             <span
               ><img src="./assets/chevron.svg" alt="Chevron descendant"
@@ -52,7 +52,7 @@
               ></ul>
             </div>
           </div>
-          <div class="filter__byTag--device reduced">
+          <div class="filter__byTag--device">
             <button class="deviceBtn" type="button">Appareils</button>
             <span
               ><img src="./assets/chevron.svg" alt="Chevron descendant"
@@ -71,7 +71,7 @@
               ></ul>
             </div>
           </div>
-          <div class="filter__byTag--ustensil reduced">
+          <div class="filter__byTag--ustensil">
             <button class="ustensilsBtn" type="button">Ustensiles</button>
             <span
               ><img src="./assets/chevron.svg" alt="Chevron descendant"
