--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
       </form>
 
-      <section class="recipes"></section>
+      <div class="recipes"></div>
     </main>
     <script src="./scripts/script.js" type="module"></script>
     <script src="./scripts/utils/eventListener.js" type="module"></script>
